--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
 
     <groupId>de.netherspace.tools</groupId>
     <artifactId>spectre-graphql-maven-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <name>spectre-graphql-maven-plugin</name>
     <packaging>maven-plugin</packaging>
 
     <properties>
         <java.version>11</java.version>
+        <kotlin.version>1.3.61</kotlin.version>
         <antlr.version>4.7.2</antlr.version>
         <slf4j.version>1.7.29</slf4j.version>
         <maven.plugin.version>3.6.3</maven.plugin.version>
@@ -17,13 +18,22 @@
     </properties>
 
     <dependencies>
-        <!-- Lombok and Slf4j: -->
+        <!-- Lombok: -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Kotlin: -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+
+        <!-- Logger: -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
