--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
                 <artifactId>kotlin-stdlib</artifactId>
                 <version>${kotlin.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-reflect</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlinx</groupId>
+                <artifactId>kotlinx-serialization-runtime</artifactId>
+                <version>0.14.0</version>
+            </dependency>
 
             <!-- Logger: -->
             <dependency>
@@ -82,6 +92,13 @@
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4</artifactId>
                 <version>${antlr.version}</version>
+            </dependency>
+
+            <!-- for code generation: -->
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>codemodel</artifactId>
+                <version>2.3.2-1</version>
             </dependency>
 
             <!-- for tests: -->
